--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,6 @@
 title: [5e Ship Combat]
 description: [Optional D&D Rules for Ship Combat]
+markdown: GFM
 
 remote_theme: pages-themes/midnight@v0.2.0
 plugins:
